# FDSB-FreeDesignStudioBot

./: .gitignore  BCFD.py  FDCore.py  FDSB.py  README.md  local_server.py  main.py  new.txt  pyproject.toml  requirements.txt  settings.py  variables_view.py  wiki.md
app_data/: config.json  prefixes.json  settings.json  variables.json
app_data/files/: wew.py
app_data/wew/bot_commands/: help.py  infoserver.py  ping.py  roll.py
app_data/wew/bot_files/: config.json
app_data/wew/bot_vars/: sides.json
cmds_FDScripts/: addBotReactions.py  botName.py  break_.py  clear.py  clientTyping.py  cooldown.py  deletecommand.py  description.py  div.py  dm.py  elif_.py  else_.py  endif.py  getVar.py  image.py  kick.py  log.py  onlyAdmin.py  onlyIf.py  randomUserID.py  replaceText.py  replyIn.py  return.py  sendEmbedMessage.py  strictArgs.py  timeout.py  title.py  unban.py  untimeout.py  uptime.py  var.py  wait.py
event_FDScripts/: alwaysReply.py  onLeave.py
langs/: translations.py
main_exe/: FDScript.py  commands_view.py  config.py  data_manager.py  file_editor_screen.py  files_list_screen.py  local_server.py  main.py  main_app.py  main_screen.py  new.txt  project_structure.md  settings.py  theme_engine.py  translations.py  variables.py  variables_screen.py  variables_view.py  widgets.py
main_exe/core_bcfd/: FDCore.py  FDScript.py  local_server.py
main_exe/core_bcfd/cmds_FDScripts/: addTimestamp.py  addUserReactions.py  and.py  (+36 more)
main_exe/core_fdsb/: FDCore.py  FDScript.py  local_server.py
main_exe/langs/: ar.py  ch.py  de.py  en.py  fr.py  ru.py  tr.py  translations.py
(+73 files in other folders)
